@@ -1,5 +1,6 @@
 python-apt (0.7.8) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * python/cache.cc:
     - fix crash if Ver.PriorityType() returns NULL 
     - fix GetCandidateVer() reporting incorrect versions after
@@ -24,6 +25,9 @@ python-apt (0.7.8) UNRELEASED; urgency=low
     - fix crash when incorrect attribute is given
   * data/templates/Ubuntu.info.in:
     - updated
+
+  [ Julian Andres Klode ]
+  * python/acquire.cc (GetPkgAcqFile): Support DestDir and DestFilename.
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 10:24:30 +0200
 
